
sbin_PROGRAMS = dhcpsnoopingd

ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = $(ROAMING_FLAGS) $(MYSQL_FLAGS) $(MYSQL_CFLAGS) $(LIBNL_CFLAGS) $(LIBNLGENL_CFLAGS) $(LIBNLNF_CFLAGS) $(LIBNLROUTE_CFLAGS) -Wall -D _FORTIFY_SOURCE=2 -O2 -g -fPIE
LIBS = $(MYSQL_LIBS) $(LIBNL_LIBS) $(LIBNLGENL_LIBS) $(LIBNLNF_LIBS) $(LIBNLROUTE_LIBS)
dhcpsnoopingd_SOURCES = dhcpsnoopingd.c

